--- a/javascript/package.json
+++ b/javascript/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
-    "openai": "^3.1.0"
+    "lodash": "^4.17.21",
+    "openai": "^3.1.0",
+    "seedrandom": "^3.0.5"
   }
 }
